@@ -112,6 +112,25 @@ crc32:a13337d0  ref/primary.xml
 crc64:be4b869d417bae42  ref/primary.xml
 adler32:85d8b467  ref/primary.xml
 jlu32:075b70be  ref/primary.xml
+md2:6e780b9a14ba344ff223bb67f5952d91  ref/querytags
+md4:3f6bfc40d995c66b9e19ccc6447b6c63  ref/querytags
+md5:a297057e284cb7c4f5d4d862bdbd0b64  ref/querytags
+sha1:833cfeb0a588f20b2f5b63ffbfd07e9c0e1ccdd1  ref/querytags
+sha224:881bdecd89e5dfd96c9cbcfc01870badebd243290831b74da6e02533  ref/querytags
+sha256:b5de8603cd1eadd22bbf96807b96b3253f5f429e5c905ae4292076764e0988cb  ref/querytags
+sha384:8e89a94da9300f4b54ea4c4836c972a2371f94502b436cae1f2e295cd0d0fcc75cfb49c4c700c520715413fe1664ec29  ref/querytags
+sha512:8f28f16879a242c1b7421b3a3c9b7e07dcf4653a941b1d23674326c767ba6805b899f4b55703564f695ac4da2f024e4a47c73fd06c31245997df47a35bfb7708  ref/querytags
+salsa10:6af3d20e3ea5dbe08716285bbe90bedae7bc54ac2d0dfa41f1aedcdb7bddf8d0d1e90d5ffe9b43586264c55f4581a0199ec7ae26712849da0a56facb5653015a  ref/querytags
+salsa20:28b2a7effd01207f004ee2ad58af61c2f4fa6d96bfa9352e3abed66ac49282a8adc90d5b6143eaae06035c81518ab6142eff176919da19ee4d0a33aa276c7c3f  ref/querytags
+rmd128:ece1bc91790a86f49cef4068b42bd09c  ref/querytags
+rmd160:874b8e2f056c09864e7323acaef684180f5eb897  ref/querytags
+rmd256:b642c8b67f1ecb4044934c3ae809610a3b37211c99f69b39b150a1177311e515  ref/querytags
+rmd320:f7f65bb99d2b23c582e1e9a21d4105fe0fb356053302d3b875225b86042c302e1ae544c4fd7ecced  ref/querytags
+tiger:b93b80c8a848abccc3c537a731ef414c2a0e469be95d7096  ref/querytags
+crc32:7755cf2f  ref/querytags
+crc64:c7c165056eac5f2d  ref/querytags
+adler32:a62d119d  ref/querytags
+jlu32:467305ea  ref/querytags
 md2:66022617d63bbfc96e4e28e32d981b41  ref/repomd.xml
 md4:dba4a2bfe1cea3c85604ff9dcb49fffd  ref/repomd.xml
 md5:846e5895b82253640dea934d48814c9c  ref/repomd.xml
@@ -131,3 +150,41 @@ crc32:abb57046  ref/repomd.xml
 crc64:9ea14bd47b78e1ed  ref/repomd.xml
 adler32:7405218d  ref/repomd.xml
 jlu32:9303f422  ref/repomd.xml
+md2:fe50953023d52e001c28defa2f99e4df  ref/showrc
+md4:2cbe07381d14758aca1417875c8c5c43  ref/showrc
+md5:7b1b6e21dccfc39e8f96a5c1cf115d1a  ref/showrc
+sha1:43500c96df41674697ea3d3927ae1ccbc0410a0e  ref/showrc
+sha224:8b90985c743f14206ba049db55c60cef2d1af95155658931092f3207  ref/showrc
+sha256:d406e4847686dc6874b59c0505e161251c8517c70a0d064cc284afe8a37bd61a  ref/showrc
+sha384:17ea6625d15ad4684654d27b3896f9ef013e3f1e06cf6099eb4d9ca2885f307252ad1d7cc74ba19ee4d86c48b4f05447  ref/showrc
+sha512:2e4f5638e56726db6be2b107c86723a5f84f82c45c0114f514b534ee47d54abaeb8652bcc11f55a004d3d7f1c4f43725764853a6172a36a3178e32e8b581d655  ref/showrc
+salsa10:98f32dd9ab6532c951cdf5ef9c9900185c70acacf746588656f95016b10d13a7ae21b26072a42eda6fa49611569b5ac1f2c43b80a173e0a5cf8d6f9a4bcd06ce  ref/showrc
+salsa20:f06b61565d9f9f6c41c16a14a1dd4874b4ad5309d86ba45dcda522be294b65808557eb41bc3c7c775d20955e44d5b7c4e1da989279d7055bb9debc971f03deb0  ref/showrc
+rmd128:7a45f3796234890038258b544bf71ff5  ref/showrc
+rmd160:10613b59a0f841f0539a04c16e21214508820bab  ref/showrc
+rmd256:f4be9ea2010577c4bb1f2b565f71b79dd502354d0bb64fd5ffcaa766ac5d564b  ref/showrc
+rmd320:a4abc7081a4f03a2791ce14adb9971e38b4bfb3578f6f20975472e0f67ff104d808c7ea91b753cf6  ref/showrc
+tiger:b10e5c7b6ef7f0edcc75a02859cbd9c03b22f5eb7329e441  ref/showrc
+crc32:eb99bb30  ref/showrc
+crc64:b2c52620ef9528b4  ref/showrc
+adler32:d60c649b  ref/showrc
+jlu32:d21d2902  ref/showrc
+md2:3699f451aab204004bc1a3e476e3251b  ref/version
+md4:cd78bafb873dfa81813a597ca8de68c3  ref/version
+md5:36dd3060141bc10113fcab72322a864b  ref/version
+sha1:d44906600422a76aa243d531160d051357144150  ref/version
+sha224:15c0e9752c3a0324b1e0164324caf6c42597e72caf970cebd940b095  ref/version
+sha256:0d7eee7f72bebfb2b088014084ba171f8220fd4cd0d47041b6aba32d36043a81  ref/version
+sha384:fa139ad43a321332a707fb32c02578492dd1ce5a250393cad7b69f46b60968b8b9632d392382e346e72f4d9353c6fc9e  ref/version
+sha512:e59e1e9fba51d1850404b511e33fe2b84efbc6c4cca047ddded8cc3ed4bb4b92d8c609b9a9a58c5ae0f015cede52a872a8d30a4ece2d04a328360b7b0975b130  ref/version
+salsa10:831e5f1d9bb9cc6b0ad035ba20e6f878a10ba388ae109ba53df94f83251e27a5c35749e3b5c9b5837da77646f542add3a5f6f5304ef4a98fb9dd2fd891bfed33  ref/version
+salsa20:23af274ec0c142af49cc8162a93bf05f04b36aa80f278b71fbcbde662799180683a288d5f36a0963cc05e1e64bde1dfcf9ca4b89881140621225bdf567efa109  ref/version
+rmd128:890dab78c91e0ce5dff4aad7f04dd240  ref/version
+rmd160:e547cf19eaa599c073c21ff9a6eba73403d05d1b  ref/version
+rmd256:a703347dd30ae9a4fbbf4d194af62db961a36dd419a22ae5c831cecb12dc7da1  ref/version
+rmd320:919fba69841cf6b449ce587968728f2a2aeae0b9c4e7f7d816bfacca06b2005037b623ac8efd9437  ref/version
+tiger:91373d1ad754811fa38eca3129f0b3344d544bb44b94437e  ref/version
+crc32:9d2faa39  ref/version
+crc64:6f3df6810ea38f6a  ref/version
+adler32:2a941034  ref/version
+jlu32:6d30d008  ref/version
