@@ -1,4 +1,6 @@
 5.1.2 -> 5.1.3:
+    - jbj: tests: verify setup using --version/--querytags/--showrc.
+    - jbj: display noisy getconf()/uname() info with -vv --showrc instead.
     - jbj: shorten debugging messages, --queryformat strings passed to
 	headerSprintf are getting huge.
     - jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
